add email registrtion part 1
